evaluation/rq1/sota/mythril/execution_logs/0x0x1a################################98b7f_poly.sol.txt
The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/Implementation/WadRayMath.sol:4:1: ParserError: Source "./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/helpers/Errors.sol" not found: File not found.
import {Errors} from '../helpers/Errors.sol';
^-------------------------------------------^

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/Implementation/IRescue.sol:2:1: SyntaxError: Source file requires different compiler version (current compiler is 0.5.0+commit.1d4f565a.Linux.g++ - note that nightly builds are considered to be strictly less than the released version
pragma solidity >0.5.0;
^---------------------^

SolidityVersionMismatch: Try adding the option "--solv 0.5.0"

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/Implementation/IncentivizedERC20_0.sol:4:1: ParserError: Source "./PoCShift/contract_inspection/dependencies/openzeppelin/contracts/Context.sol" not found: File not found.
import {Context} from '../../dependencies/openzeppelin/contracts/Context.sol';
^----------------------------------------------------------------------------^

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/Implementation/IAToken.sol:4:1: ParserError: Source "./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/dependencies/openzeppelin/contracts/IERC20.sol" not found: File not found.
import {IERC20} from '../dependencies/openzeppelin/contracts/IERC20.sol';
^-----------------------------------------------------------------------^

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/Implementation/ILendingPool.sol:6:1: ParserError: Source "./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/protocol/libraries/types/DataTypes.sol" not found: File not found.
import {DataTypes} from '../protocol/libraries/types/DataTypes.sol';
^------------------------------------------------------------------^

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/Implementation/ILendingPool.sol:6:1: ParserError: Source "./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/protocol/libraries/types/DataTypes.sol" not found: File not found.
import {DataTypes} from '../protocol/libraries/types/DataTypes.sol';
^------------------------------------------------------------------^

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/Implementation/IRescue_0.sol:2:1: SyntaxError: Source file requires different compiler version (current compiler is 0.5.0+commit.1d4f565a.Linux.g++ - note that nightly builds are considered to be strictly less than the released version
pragma solidity >0.5.0;
^---------------------^

SolidityVersionMismatch: Try adding the option "--solv 0.5.0"

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/Implementation/AToken_0.sol:4:1: ParserError: Source "./PoCShift/contract_inspection/dependencies/openzeppelin/contracts/IERC20.sol" not found: File not found.
import {IERC20} from '../../dependencies/openzeppelin/contracts/IERC20.sol';
^--------------------------------------------------------------------------^

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/Implementation/AToken.sol:4:1: ParserError: Source "./PoCShift/contract_inspection/dependencies/openzeppelin/contracts/IERC20.sol" not found: File not found.
import {IERC20} from '../../dependencies/openzeppelin/contracts/IERC20.sol';
^--------------------------------------------------------------------------^

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/Implementation/ILendingPool.sol:6:1: ParserError: Source "./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/protocol/libraries/types/DataTypes.sol" not found: File not found.
import {DataTypes} from '../protocol/libraries/types/DataTypes.sol';
^------------------------------------------------------------------^

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/Implementation/WadRayMath_0.sol:4:1: ParserError: Source "./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/helpers/Errors.sol" not found: File not found.
import {Errors} from '../helpers/Errors.sol';
^-------------------------------------------^

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/Implementation/ILendingPool_0.sol:6:1: ParserError: Source "./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/protocol/libraries/types/DataTypes.sol" not found: File not found.
import {DataTypes} from '../protocol/libraries/types/DataTypes.sol';
^------------------------------------------------------------------^

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/Implementation/IncentivizedERC20.sol:4:1: ParserError: Source "./PoCShift/contract_inspection/dependencies/openzeppelin/contracts/Context.sol" not found: File not found.
import {Context} from '../../dependencies/openzeppelin/contracts/Context.sol';
^----------------------------------------------------------------------------^

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/Implementation/IAToken_0.sol:4:1: ParserError: Source "./PoCShift/contract_inspection/0x1a################################98b7f_poly.sol/dependencies/openzeppelin/contracts/IERC20.sol" not found: File not found.
import {IERC20} from '../dependencies/openzeppelin/contracts/IERC20.sol';
^-----------------------------------------------------------------------^

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
